# tiny-NPU

./: Makefile
sim/verilator/: CMakeLists.txt
